fix(header): fix negative letter spacing

--- a/src/components/site-header/index.scss
+++ b/src/components/site-header/index.scss
@@ -68,7 +68,7 @@
 
 .header-title {
   bottom: 4.5rem;
-  letter-spacing: -remCalc(1px);
+  letter-spacing: remCalc(-1px);
   margin: 0;
   position: absolute;
   text-align: center;
